# tse-analytics

./: .gitignore  .python-version  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  Taskfile.yml  _repro_groupby.py  pyproject.toml  pysidedeploy.spec  setup.cfg  setup.py  test_path.pkl  tse-analytics.pro  tse-analytics.pyproject
.agent/rules/: tech-stack.md
.agent/workflows/: convert-toolbox-widget.md
.claude/: CLAUDE.md  settings.json
.claude/commands/: save-plan.md
.claude/rules/: code-style.md  commands.md  project-structure.md  testing.md  toolbox-widget-pattern.md
.cursor/plans/: histogram_pipeline_node_9179bb4f.plan.md
.junie/: guidelines.md
dev-docs/: 05-data-model.md  07-layouts-ui.md  08-toolbox.md  10-modules-extensions.md  11-conventions.md  12-extending.md  13-packaging-deployment.md  README.md
docs/: 404.html  HelpTOC.json  Map.jhm  additional-widgets.html  ancova.html  ancova.md  animals.html  anova-widget.html  anova.md  autocorrelation.html  binning-widget.html  bivariate-widget.html  config.json  correlation.html  data-export-and-report.html  data-widgets.html  datasets.html  decomposition.html  dimensionality-widget.html  disclaimer.html  distribution.html  distribution.md  exploration-widget.html  factors.html  getting-started.html  help.html  histogram.html  import-dataset.html  index.html  info.html  installation.html  introduction.html  log.html  main-menu.html  main-widgets.html  main.md  matrix-plot.html  mixed-design-anova.html  n-way-anova.html  normality.html  (+18 more)
docs/demo/: markdown.html  zensical.html
docs/dev/: 01-architecture.md  02-messaging.md  03-services-manager.md  04-threading-workers.md  05-data-model.md  06-persistence.md  08-toolbox.md  09-pipeline.md  10-modules-extensions.md  11-conventions.md  12-extending.md  13-packaging-deployment.md  14-universal-datatable.md  README.md
docs/get-started/: data-export.html  data-import.html  index.html  main-menu.html  workspaces.html
docs/images/: Main Window  Report Interface png
docs/main/: animals.html  binning.html  datasets.html  factors.html  help.html  index.html  info.html  log.html  main-window.html  variables.html
docs/toolbox/: index.html
docs/topics/: AN-C-OVA-widget.md  ANCOVA.md  ANOVA-widget.md  Additional-Widgets.md  Animal-List.md  Animals.md  Autocorrelation.md  Binning-widget.md  Bivariate-widget.md  Correlation.md  Data-Export-and-Report.md  Data-Widgets.md  Dataset-widget.md  Datasets.md  Decomposition.md  Dimensionality-widget.md  Disclaimer.md  Distribution.md  Exploration-widget.md  Export-of-Data.md  Factors-widget.md  Factors.md  Getting-Started.md  Help.md  Histogram.md  Import-Dataset.md  Import-Datasets.md  Info.md  Installation.md  Introduction.md  Log.md  Main-Menu.md  Main-Widgets.md  Main-window.md  Matrix-Plot.md  Mixed-design-ANOVA.md  N-way-ANOVA.md  Normality.md  One-way-ANOVA.md  Open-Source-Software-Packages.md  (+18 more)
docs/user/: 404.html  installation.html  overview.html  sitemap.xml
examples/: basic_example.py
examples/hotkeys/: hotkey_functions.py
examples/nodes/: custom_ports_node.py  group_node.py  widget_nodes.py
notebooks/: actimot.ipynb  testbed.ipynb
packaging/: tse-analytics.iss  tse-analytics.spec
packaging/flatpak/: README.md  build-dist-in-manylinux.sh  io.github.TSE_Systems.tse_analytics.desktop  io.github.TSE_Systems.tse_analytics.metainfo.xml  io.github.TSE_Systems.tse_analytics.yml  tse-analytics.sh
requirements/: common.txt  dev.txt  requirements.frozen.txt
resources/: resources.qrc  style.qss
scripts/: build_resources.py  build_ui.py  clean.py  coverage.py  deploy.py  deploy_pyside.py  lint.py  qss.py  test.py  update.py
setup/: tse-analytics.iss  tse-analytics.spec
tests/: conftest.py
tests/core/: conftest.py  test_color_manager.py  test_csv_import_settings.py  test_exceptions.py  test_help_manager.py  test_manager.py  test_toaster.py  test_utils.py
tests/pipeline/: test_nodes.py  test_registration.py
tests/toolbox/: conftest.py  test_actogram_processor.py  test_ancova_processor.py  test_composite_score_processor.py  test_correlation_processor.py  test_distribution_processor.py  test_histogram_processor.py  test_normality_processor.py  test_one_way_anova_processor.py  test_regression_processor.py  test_toolbox_registry.py
tests/views/: test_toolbox_button_structure.py
traja/: __init__.py  accessor.py  core.py  frame.py  parsers.py  plotting.py  trajectory.py
tse_analytics/: __init__.py  __main__.py  app.py  css.py  globals.py  main.py  resources_rc.py  style.qss  test.py
tse_analytics/analysis/: binning_mode.py  binning_operation.py  binning_params.py  outliers_mode.py  outliers_params.py
tse_analytics/calo_details/: calo_details_fitting_result.py  calo_details_processor.py  fitting_params.py
tse_analytics/core/: color_manager.py  csv_import_settings.py  dataset_merger.py  decorators.py  exceptions.py  help_manager.py  helper.py  helpers.py  licensing.py  manager.py  notificator.py  predefined_variables.py  pretty_html_table.py  settings_manager.py  toaster.py  tse_import_settings.py  utils.py  view_mode.py
tse_analytics/data/: binning_settings.py  calo_details.py  data_hub.py  dataset.py  factor.py  time_cycles_binning_settings.py  time_phases_binning_settings.py  workspace.py
tse_analytics/docs/: anova.md  correlation.md  glm.md  histogram.md  main.md  normality.md  prophet-forecasting.md  timeseries-autocorrelation.md  timeseries-decomposition.md  timeseries-prophet.md
tse_analytics/helpers/: dataset_merger.py
tse_analytics/libs/: QtImageViewer.py  range_slider.py
tse_analytics/loaders/: calo_details_loader.py  dataset_loader.py
tse_analytics/messaging/: messages.py  messenger.py  messenger_callback_container.py  messenger_listener.py
tse_analytics/models/: actimot_tree_item.py  animals_model.py  boxes_model.py  calo_details_boxes_model.py  calo_details_tree_item.py  calorimetry_tree_item.py  dataset_component_tree_item.py  dataset_tree_item.py  drinkfeed_tree_item.py  factors_model.py  groups_model.py  json_model.py  (+7 more)
tse_datatools/: _version.py
(+1378 files in other folders)
