[project]
name = "tse-analytics"
version = "2.0.0beta7"
description = "TSE Analytics data analysys"
license = "GPL-3.0-or-later"
readme = "README.md"
authors = [
    { name = "Anton Rau", email = "anton.rau@gmail.com" }
]
homepage = "https://github.com/TSE-Systems/tse-analytics"
repository = "https://github.com/TSE-Systems/tse-analytics"
requires-python = "==3.14.6"
dependencies = [
    "anthropic==0.111.0",
    "astropy==8.0.0",
    "connectorx==0.4.5",
    "css-inline==0.21.0",
    "duckdb==1.5.4",
    "great-tables==0.22.0",
    "jinja2==3.1.6",
    "lmfit==1.3.4",
    "lmstudio==1.5.0",
    "loguru==0.7.3",
    "matplotlib==3.11.0",
    "nodegraphqt==0.6.44",
    "openpyxl==3.1.5",
    "pandas==3.0.3",
    "pingouin==0.6.1",
    "psutil==7.2.2",
    "ptitprince==0.3.1",
    "pydantic==2.13.4",
    "pyqt-toast-notification==1.3.3",
    "pyqtgraph==0.14.0",
    "pyside6==6.11.1",
    "pyside6-qtads==4.5.0.5",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "seaborn==0.13.2",
    "statsmodels==0.14.6",
    "traja==25.0.1",
    "umap-learn==0.5.12",
    "xmltodict==1.0.4",
]

[dependency-groups]
dev = [
    "pyinstaller==6.21.0",
    "pyinstrument==5.1.2",
    "pyrefly==1.1.1",
    "pytest==9.1.1",
    "qtsass==0.4.0",
    "ruff==0.15.18",
    "ty==0.0.51",
]

[project.scripts]
tse-analytics = "tse_analytics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.main]
ignore-patterns = ['.*ui\.py']

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
python_version = "3.14"
exclude = ['.*ui\.py']
strict = false
ignore_missing_imports = true
disable_error_code = "union-attr,override"

[tool.ruff]
preview = true
unsafe-fixes = false
line-length = 120
target-version = "py314"
src = ["tse_analytics"]
exclude = [
    "*_ui.py",
    "*_rc.py",
    "traja"
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "NPY201", # numpy2-deprecation
]
ignore = [
    "F821", # Undefined name
    "E501", # Line too long
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
python-version = "3.14"
python-platform = "win32"
root = ["./tse_analytics"]

[tool.pyrefly]
project-includes = ["tse_analytics"]
search-path = ["tse_analytics"]
project-excludes = ["**/*ui.py"]
python-version = "3.14"
python-platform = "win32"

[tool.pyrefly.errors]
missing-attribute = false
